--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=intro.html">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BİLGE & ALP - Akıllı Araç Asistanı</title>
+    
+    <!-- PWA için gerekli eklemeler -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#2e86ab">
+    <link rel="apple-touch-icon" href="icon-192.png">
+    
+    <!-- Mevcut style tagların... -->
 </head>
 <body>
     <script>window.location.href = "intro.html";</script>
